# mesh-talk

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT.md  README.md  README_zh.md  SECURITY.md  USAGE.md  _typos.toml  deny.toml  package-lock.json  package.json  refactor.md
.cargo/: config.toml
.claude/: settings.json
.gemini/: settings.json  settings.json.orig
.github/: dependabot.yml  pull_request_template.md  release-notes.md
.qwen/: settings.json
config/: mesh_talk.json
crates/mesh-talk-core/: Cargo.toml  README.md
crates/mesh-talk-core/src/: dm.rs  lib.rs  limits.rs  message.rs
crates/mesh-talk-core/src/channel/: crypto.rs  mod.rs  model.rs  sender_key.rs
crates/mesh-talk-core/src/discovery/: announce.rs  mod.rs  roster.rs  service.rs
crates/mesh-talk-core/src/eventlog/: event.rs  mod.rs  persist.rs  store.rs  sync.rs
crates/mesh-talk-core/src/file/: crypto.rs  manifest.rs  mod.rs
crates/mesh-talk-core/src/gateway/: mod.rs
crates/mesh-talk-core/src/identity/: account.rs  auth.rs  device.rs  errors.rs  keys.rs  manager.rs  mod.rs  tests.rs  user.rs
crates/mesh-talk-core/src/node/: call.rs  channel.rs  channel_senders.rs  channels.rs  conversation.rs  dm.rs  dm_envelope.rs  dm_ratchet.rs  filebook.rs  files.rs  lifecycle.rs  linking.rs  mdns.rs  media_store.rs  message.rs  mod.rs  name_directory.rs  net.rs  node.rs  node_tests.rs  pairing.rs  postbox.rs  profile.rs  profile_io.rs  profile_store.rs  queries.rs  ratchet_sessions.rs  reaction.rs  reactions.rs  recall.rs  received_log.rs  runtime.rs  sentlog.rs  serving.rs  session.rs  transport.rs  wire.rs
crates/mesh-talk-core/src/postoffice/: election.rs  mod.rs
crates/mesh-talk-core/src/ratchet/: kdf.rs  mod.rs  state.rs
crates/mesh-talk-core/src/storage/: encryption.rs  errors.rs  file_manager.rs  mod.rs  record_log.rs  serialization.rs
crates/mesh-talk-core/src/transport/: auth.rs  channel.rs  handshake.rs  mod.rs  net.rs  session.rs
crates/mesh-talk-core/src/util/: address.rs  fanout.rs  mod.rs  safety_number.rs  savename.rs
crates/mesh-talk-core/tests/: channel_and_file_cli.rs  decoder_smoke.rs  persistent_history.rs  post_office_offline.rs  two_node_cli.rs
crates/mesh-talk-signal/: Cargo.toml
crates/mesh-talk-signal/src/: lib.rs  main.rs
crates/mesh-talk-signal/tests/: relay.rs
crates/mesh-talk-wasm/: Cargo.toml  smoke.mjs
crates/mesh-talk-wasm/src/: datachannel.rs  lib.rs
docs/: ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  README.md  chat-ui-manual-test.md  redesign-ui-manual-test.md  solution.md
frontend/: .gitignore  .prettierignore  DEPLOY.md  DESIGN.md  audit-ci.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js  vite.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: announce_decode.rs  channel_meta_decode.rs  dm_envelope_decode.rs  file_manifest_decode.rs  message_body_decode.rs  ratchet_header_decode.rs  ratchet_state_deserialize.rs  reaction_envelope_decode.rs  reaction_payload_decode.rs  sender_key_deserialize.rs  sender_key_distribution_decode.rs
hooks/: commit-msg  pre-commit  pre-push
scripts/: auto-maintain.sh  check-health.sh  clean_commit.sh  setup-hooks.sh  verify.sh
site/: index.html
specifications/: TODO.md  deployment_guide.md  development_conventions.md  git_standards.md  platform_permissions.md  (+6 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  icons-src  tauri.conf.json
src-tauri/benches/: message_passing_benchmark.rs
src-tauri/capabilities/: default.json  fs-allow-home.json
src-tauri/examples/: test_user_friendly_errors.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: api.rs  avatars.rs  channel.rs  chat_commands.rs  commands.rs  config_store.rs  diagnostics.rs  dm.rs  error.rs  events.rs  favorites.rs  lan_host.rs  lib.rs  main.rs  perf.rs  redesign_commands.rs  session_store.rs  settings.rs  state.rs  tray.rs  trust.rs  user_friendly_errors.rs  utils.rs
src-tauri/src/channel/: mod.rs  model.rs  sender_key.rs
src-tauri/src/contacts/: contact.rs  discovery.rs  errors.rs  integration.rs  manager.rs  mod.rs  public_key_encryption.rs  request.rs  service.rs  signing.rs  tests.rs
src-tauri/src/crypto/: keys.rs  mod.rs  session.rs  signal.rs  storage.rs  tests.rs
src-tauri/src/discovery/: announce.rs  mod.rs  roster.rs  service.rs
src-tauri/src/domain/: message.rs  mod.rs  models.rs  node.rs  node_registry.rs
src-tauri/src/eventlog/: event.rs  mod.rs  persist.rs  store.rs  sync.rs
src-tauri/src/file/: crypto.rs  manifest.rs  mod.rs
src-tauri/src/identity/: account_keystore.rs  device.rs  keys.rs  keystore.rs  manager.rs  mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/network/: mod.rs  reconnection.rs  runtime.rs  tcp.rs  udp.rs  utils.rs
src-tauri/src/node/: channel.rs  channel_senders.rs  channels.rs  conversation.rs  dm.rs  dm_envelope.rs  dm_ratchet.rs  filebook.rs  files.rs  linking.rs  mod.rs  net.rs  node.rs  node_tests.rs  pairing.rs  postbox.rs  ratchet_sessions.rs  reaction.rs  reactions.rs  received_log.rs  runtime.rs  sentlog.rs  serving.rs  session.rs  transport.rs
src-tauri/src/notifications/: desktop.rs  mod.rs  settings.rs  tests.rs  tray.rs
src-tauri/src/platform/: firewall.rs  linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
src-tauri/src/postoffice/: election.rs  mod.rs
src-tauri/src/ratchet/: mod.rs  state.rs
src-tauri/src/services/: auth_service.rs  common.rs  contact_request_service.rs  contact_service.rs  file_transfer.rs  message_service.rs  mod.rs  node_service.rs  notification_service.rs  user.rs
src-tauri/src/storage/: encryption.rs  file_manager.rs  serialization.rs  tests.rs
src-tauri/src/transport/: auth.rs  channel.rs  handshake.rs  mod.rs  session.rs  tests.rs
src-tauri/src/utils/: error_handling.rs
src-tauri/tests/: e2e_tests.rs  network_optimization_tests.rs  node_service_test.rs  persistent_history.rs  post_office_offline.rs  two_node_cli.rs
(+285 files in other folders)
