[package]
name = "mesh-talk"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kingson4Wu/mesh-talk"
description = "A local-network peer-to-peer chat app (Rust + Tauri)."
default-run = "mesh-talk"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
macos-platform = ["keyring/apple-native"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
lazy_static = "1.4"
rand = "0.9"
argon2 = { version = "0.5", features = ["std"] }
keyring = { version = "3.6.3", optional = true }
socket2 = { version = "0.6", features = ["all"] }
# Storage dependencies
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.11"
hkdf = "0.12"
bincode = "1.3"
# Identity dependencies
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-log = "2"
tracing = "0.1.41"
log = "0.4.28"
hex = "0.4"
# For RSA encryption test
rsa = { version = "0.9", features = ["std"] }
# Noise secure transport
snow = "0.9"
zeroize = "1"

[dev-dependencies]
once_cell = "1.19"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
futures = "0.3"

[lib]
name = "mesh_talk"
path = "src/lib.rs"

[[bin]]
name = "mesh-talk"
path = "src/main.rs"

[[bin]]
name = "mesh-talk-cli"
path = "src/bin/mesh-talk-cli.rs"

[[bin]]
name = "mesh-talk-node"
path = "src/bin/mesh-talk-node.rs"
