[package]
name = "mesh-talk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh-Talk desktop app (Tauri) — a thin UI shell over mesh-talk-core."
default-run = "mesh-talk"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# The protocol core (the SDK layer this app is built on).
mesh-talk-core = { path = "../crates/mesh-talk-core" }
# Tauri shell
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
# Shared (versions from the workspace)
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "mesh_talk"
path = "src/lib.rs"

[[bin]]
name = "mesh-talk"
path = "src/main.rs"
