[package]
name = "mesh-talk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh-Talk desktop app (Tauri) — a thin UI shell over mesh-talk-core."
default-run = "mesh-talk"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# The protocol core (the SDK layer this app is built on).
mesh-talk-core = { path = "../crates/mesh-talk-core" }
# Tauri shell
# NOTE: do NOT enable the "devtools" feature — it ships the webview inspector (right-click
# → Inspect / console) in RELEASE builds too. Debug builds still get devtools automatically
# via debug_assertions, which is all lib.rs's open_devtools() needs.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
# Desktop integration: focus-existing-instance, restore window geometry, open/reveal files.
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
# Shared (versions from the workspace)
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
rand = "0.9" # session-token generation; already in the tree via tauri-plugin-notification
hex = { workspace = true }
lazy_static = { workspace = true }
serde_json = "1" # persist app settings as JSON in the app config dir
# "Stay signed in": store the login password in the OS keychain (macOS Keychain,
# Windows Credential Manager, Linux Secret Service) — never on plaintext disk.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1"
# Collapse the password KDFs (Argon2 + PBKDF2) to a trivial cost FOR TESTS ONLY. Cargo activates
# a dev-dependency feature only when building test/example/bench targets, never for `cargo build`
# or release, so the shipped app keeps full-strength key derivation. Without this, this crate's
# auth_service tests pay ~12s per derivation (≈200s total) because it links mesh-talk-core as a
# normal (non-test) dependency and so doesn't inherit the core crate's own `cfg(test)` cheap path.
mesh-talk-core = { path = "../crates/mesh-talk-core", features = ["fast-test-kdf"] }

[lints]
workspace = true

[lib]
name = "mesh_talk"
path = "src/lib.rs"

[[bin]]
name = "mesh-talk"
path = "src/main.rs"
