[package]
name = "mesh-talk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh-Talk core: a serverless, end-to-end-encrypted LAN messaging protocol — identity & device certificates, an encrypted event log with peer sync, Double Ratchet + sender-key forward secrecy, a Noise transport, LAN discovery, a store-and-forward post office, and the node runtime. UI-free; the basis for an SDK."

[lib]
name = "mesh_talk_core"
path = "src/lib.rs"

# A headless node, usable on its own and as the reference SDK consumer.
[[bin]]
name = "mesh-talk-node"
path = "src/bin/mesh-talk-node.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
socket2 = { workspace = true }
if-addrs = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand_chacha = "0.3" # seeded CSPRNG for deterministic property tests (rand_core 0.6 SeedableRng)
